--- a/云.md
+++ b/云.md
@@ -245,7 +245,200 @@ CAP 理论指出：无法设计一种分布式协议，使得同时完全具备C
 - Paxos 协议：同样是强一致性协议，Paxos 在CAP 三方面较之两阶段提交协议要优秀得多。Paxos 协议具有 完全的C，较好的A，较好的P。Paxos 的A 与P 的属性与Quorum 机制类似，因为Paxos 的协议本 身就具有Quorum 机制的因素。
 # 二、分布式事务
 事务可以看做是一次大的活动，它由不同的小活动组成，这些活动要么全部成功，要么全部失败。
+## 1. 基础概念
+### 1.1 事务
+事务可以看做是一次大的活动，它由不同的小活动组成，这些活动要么全部成功，要么全部失败。
+### 1.2 本地事务
+在计算机系统中，更多的是通过关系型数据库来控制事务，这是利用数据库本身的事务特性来实现的，因此叫数据库事务，由于应用主要靠关系数据库来控制事务，而数据库通常和应用在同一个服务器，所以基于关系型数据库的事务又被称为本地事务。
 
+数据库事务的四大特性：ACID
+
+- A（Atomic）：原子性，构成事务的所有操作，要么都执行完成，要么全部不执行，不可能出现部分成功部分失败的情况。
+- C（Consistency）：一致性，在事务执行前后，数据库的一致性约束没有被破坏。比如：张三向李四转 100 元，转账前和转账后的数据是正确状态这叫一致性，如果出现张三转出 100 元，李四账户没有增加 100 元这就出现了数 据错误，就没有达到一致性。
+- I（Isolation）：隔离性，数据库中的事务一般都是并发的，隔离性是指并发的两个事务的执行互不干扰，一个事务不能看到其他事务的运行过程的中间状态。通过配置事务隔离级别可以比避免脏读、重复读问题。
+- D（Durability）：持久性，事务完成之后，该事务对数据的更改会持久到数据库，且不会被回滚。
+
+数据库事务在实现时会将一次事务的所有操作全部纳入到一个不可分割的执行单元，该执行单元的所有操作要么都成功，要么都失败，只要其中任一操作执行失败，都将导致整个事务的回滚。
+### 1.3 分布式事务
+​ 分布式系统会把一个应用系统拆分为可独立部署的多个服务，因此需要服务与服务之间远程协作才能完成事务操作，这种分布式系统环境下由不同的服务之间通过网络远程协作完成事务称之为分布式事务，例如用户注册送积分事务、创建订单减库存事务，银行转账事务等都是分布式事务。
+## 2 分布式事务基础理论
+### 2.1 CAP 理论
+#### 2.1.1 理解CAP
+CAP 是 Consistency、Availability、Partition tolerance 三个单词的缩写，分别表示一致性、可用性、分区容忍性。
+- ​ 一致性是指写操作后的读操作可以读取到最新的数据状态，当数据分布在多个节点上，从任意结点读取到的数据都是最新的状态。
+- 可用性是指任何事务操作都可以得到响应结果，且不会出现响应超时或响应错误。
+- 通常分布式系统的各各结点部署在不同的子网，这就是网络分区，不可避免的会出现由于网络问题而导致结点之间通信失败，此时仍可对外提供服务，这叫分区容忍性。
+#### 2.1.2 CAP组合方式
+**在所有分布式事务场景中不会同时具备 CAP 三个特性，因为在具备了P的前提下C和A是不能共存**
+
+![alt text](images/46.png)
+
+如果要实现 C 则必须保证数据一致性，在数据同步的时候为防止向从数据库查询不一致的数据则需要将从数据库数据锁定，待同步完成后解锁，如果同步失败从数据库要返回错误信息或超时信息。
+
+如果要实现 A 则必须保证数据可用性，不管任何时候都可以向从数据查询数据，则不会响应超时或返回错误信息。通过分析发现在满足P的前提下 C 和 A 存在矛盾性。
+
+#### 2.1.3 CAP的组合方式
+
+1. AP  
+放弃一致性，追求分区容忍性和可用性。这是很多分布式系统设计时的选择。
+例如：上边的商品管理，完全可以实现 AP，前提是只要用户可以接受所查询到的数据在一定时间内不是最新的即可。  
+通常实现 AP 都会保证最终一致性，后面将的 BASE 理论就是根据 AP 来扩展的，一些业务场景比如：订单退款，今日退款成功，明日账户到账，只要用户可以接受在一定的时间内到账即可。
+2. CP
+放弃可用性，追求一致性和分区容错性，zookeeper 其实就是追求的强一致，又比如跨行转账，一次转账请求要等待双方银行系统都完成整个事务才算完成。
+3. CA
+放弃分区容忍性，即不进行分区，不考虑由于网络不通或结点挂掉的问题，则可以实现一致性和可用性。那么系统将不是一个标准的分布式系统，最常用的关系型数据就满足了 CA。
+#### 2.1.4 总结
+CAP 是一个已经被证实的理论，一个分布式系统最多只能同时满足：一致性（Consistency）、可用性（Availability）和分区容忍性（Partition tolerance）这三项中的两项。它可以作为我们进行架构设计、技术选型的考量标准。对于多数大型互联网应用的场景，结点众多、部署分散，而且现在的集群规模越来越大，所以节点故障、网络故障是常态，而且要保证服务可用性达到 N 个 9（99.99..%），并要达到良好的响应性能来提高用户体验，因此一般都会做出如下选择：保证 P 和 A ，舍弃 C 强一致，保证最终一致性。
+### 2.2 BASE 理论
+1. 强一致性和最终一致性  
+CAP 理论告诉我们一个分布式系统最多只能同时满足一致性（Consistency）、可用性（Availability）和分区容忍性（Partition tolerance）这三项中的两项，其中AP在实际应用中较多，AP 即舍弃一致性，保证可用性和分区容忍性，但是在实际生产中很多场景都要实现一致性，比如前边我们举的例子主数据库向从数据库同步数据，即使不要一致性，但是最终也要将数据同步成功来保证数据一致，这种一致性和 CAP 中的一致性不同，CAP 中的一致性要求 在任何时间查询每个结点数据都必须一致，它强调的是强一致性，但是最终一致性是允许可以在一段时间内每个结点的数据不一致，但是经过一段时间每个结点的数据必须一致，它强调的是最终数据的一致性。
+2. Base 理论介绍 
+BASE 是 Basically Available（基本可用）、Soft state（软状态）和 Eventually consistent （最终一致性）三个短语的缩写。BASE 理论是对 CAP 中 AP 的一个扩展，通过牺牲强一致性来获得可用性，当出现故障允许部分不可用但要保证核心功能可用，允许数据在一段时间内是不一致的，但最终达到一致状态。满足BASE理论的事务，我们称之为“柔性事务”。
+3. 基本可用：分布式系统在出现故障时，允许损失部分可用功能，保证核心功能可用。如电商网站交易付款出现问题了，商品依然可以正常浏览。
+4. 软状态：由于不要求强一致性，所以BASE允许系统中存在中间状态（也叫软状态），这个状态不影响系统可用性，如订单的"支付中"、“数据同步中”等状态，待数据最终一致后状态改为“成功”状态。
+## 3 分布式事务解决方案之 2PC
+### 3.1 2PC 介绍
+2PC 即两阶段提交协议，是将整个事务流程分为两个阶段，准备阶段（Prepare phase）、提交阶段（commit phase），2 是指两个阶段，P 是指准备阶段，C 是指提交阶段。
+
+在计算机中部分关系数据库如 Oracle、MySQL 支持两阶段提交协议，如下：
+1. 准备阶段（Prepare phase）：事务管理器给每个参与者发送 Prepare 消息，每个数据库参与者在本地执行事务，并写本地的 Undo/Redo 日志，此时事务没有提交。（Undo 日志是记录修改前的数据，用于数据库回滚，Redo 日志是记录修改后的数据，用于提交事务后写入数据文件）
+2. 提交阶段（commit phase）：如果事务管理器收到了参与者的执行失败或者超时消息时，直接给每个参与者发送回滚（Rollback）消息；否则，发送提交（Commit）消息；参与者根据事务管理器的指令执行提交或者回滚操作，并释放事务处理过程中使用的锁资源。注意：必须在最后阶段释放锁资源。
+### 3.2 解决方案
+#### 3.2.1 XA 方案
+为了更明确 XA 方案的内容，下面以新用户注册送积分为例来说明：
+
+![alt text](images/47.png)
+
+执行流程如下：
+1. 应用程序（AP）持有用户库和积分库两个数据源。
+2. 应用程序（AP）通过 TM 通知用户库 RM 新增用户，同时通知积分库RM为该用户新增积分，RM 此时并未提交事务，此时用户和积分资源锁定。
+3. TM 收到执行回复，只要有一方失败则分别向其他 RM 发起回滚事务，回滚完毕，资源锁释放。
+4. TM 收到执行回复，全部成功，此时向所有 RM 发起提交事务，提交完毕，资源锁释放。
+
+DTP 模型定义如下角色：
+- AP（Application Program）：即应用程序，可以理解为使用 DTP 分布式事务的程序。
+- RM（Resource Manager）：即资源管理器，可以理解为事务的参与者，一般情况下是指一个数据库实例，通过资源管理器对该数据库进行控制，资源管理器控制着分支事务。
+- TM（Transaction Manager）：事务管理器，负责协调和管理事务，事务管理器控制着全局事务，管理事务生命周期，并协调各个 RM。全局事务是指分布式事务处理环境中，需要操作多个数据库共同完成一个工作，这个工作即是一个全局事务。
+- DTP 模型定义TM和RM之间通讯的接口规范叫 XA，简单理解为数据库提供的 2PC 接口协议，基于数据库的 XA 协议来实现 2PC 又称为 XA 方案
+
+#### 3.2.2 Seata 方案
+**Seata 的设计思想如下：**
+Seata 把一个分布式事务理解成一个包含了若干分支事务的全局事务。全局事务的职责是协调其下管辖的分支事务达成一致，要么一起成功提交，要么一起失败回滚。此外，通常分支事务本身就是一个关系数据库的本地事务，下图是全局事务与分支事务的关系图：
+
+![alt text](images/48.png)
+
+与传统 2PC 的模型类似，Seata 定义了 3 个组件来协议分布式事务的处理过程：
+
+![alt text](images/49.png)
+
+- Transaction Coordinator（TC）：事务协调器，它是独立的中间件，需要独立部署运行，它维护全局事务的运行状态，接收 TM 指令发起全局事务的提交与回滚，负责与 RM 通信协调各各分支事务的提交或回滚。
+- Transaction Manager（TM）： 事务管理器，TM 需要嵌入应用程序中工作，它负责开启一个全局事务，并最终向 TC 发起全局提交或全局回滚的指令。
+- Resource Manager（RM）：控制分支事务，负责分支注册、状态汇报，并接收事务协调器 TC 的指令，驱动分支（本地）事务的提交和回滚。
+## 4 分布式事务解决方案之 TCC
+### 4.1 什么是TCC事务
+TCC 是 Try、Conﬁrm、Cancel 三个词语的缩写，TCC 要求每个分支事务实现三个操作：预处理 Try、确认 Conﬁrm、撤销 Cancel。Try 操作做业务检查及资源预留，Conﬁrm 做业务确认操作，Cancel 实现一个与 Try 相反的操作即回滚操作。
+
+TCC 分为三个阶段：
+1. Try 阶段是做完业务检查（一致性）及资源预留（隔离），此阶段仅是一个初步操作，它和后续的 Conﬁrm 一起才能真正构成一个完整的业务逻辑。
+2. Confirm 阶段是做确认提交，Try 阶段所有分支事务执行成功后开始执行 Conﬁrm。通常情况下，采用 TCC 则认为 Conﬁrm 阶段是不会出错的。即：只要 Try 成功，Conﬁrm 一定成功。若 Conﬁrm 阶段真的出错了，需引入重试机制或人工处理。
+3. Cancel 阶段是在业务执行错误需要回滚的状态下执行分支事务的业务取消，预留资源释放。通常情况下，采用 TCC 则认为 Cancel 阶段也是一定成功的。若 Cancel 阶段真的出错了，需引入重试机制或人工处理。
+
+### 4.2 TCC 异常处理
+TCC需要注意三种异常处理分别是空回滚、幂等、悬挂。
+
+**空回滚**  
+在没有调用 TCC 资源 Try 方法的情况下，调用了二阶段的 Cancel 方法，Cancel 方法需要识别出这是一个空回滚，然后直接返回成功。
+
+**幂等**  
+在编程中一个幂等操作的特点是其任意多次执行所产生的影响均与一次执行的影响相同。即f(f(x))=f(x)。为了保证 TCC 二阶段提交重试机制不会引发数据不一致，要求 TCC 的二阶段 Try、Conﬁrm 和 Cancel 接口保证幂等，这样不会重复使用或者释放资源。如果幂等控制没有做好，很有可能导致数据不一致等严重问题。
+
+**悬挂**  
+悬挂就是对于一个分布式事务，其二阶段 Cancel 接口比 Try 接口先执行。
+### 4.3 小结
+如果拿 TCC 事务的处理流程与 2PC 两阶段提交做比较，2PC 通常都是在跨库的 DB 层面，而 TCC 则在应用层面的处理，需要通过业务逻辑来实现。这种分布式事务的实现方式的优势在于，可以让应用自己定义数据操作的粒度，使得降低锁冲突、提高吞吐量成为可能。
+
+而不足之处则在于对应用的侵入性非常强，业务逻辑的每个分支都需要实现 Try、Conﬁrm、Cancel 三个操作。此外，其实现难度也比较大，需要按照网络状态、系统故障等不同的失败原因实现不同的回滚策略。
+## 5 分布式事务解决方案之可靠消息最终一致性
+### 5.1 什么是可靠消息最终一致性
+可靠消息最终一致性方案是指当事务发起方执行完成本地事务后并发出一条消息，事务参与方（消息消费者）一定能够接收消息并处理事务成功，此方案强调的是只要消息发给事务参与方最终事务要达到一致。
+
+![alt text](images/50.png)
+
+事务发起方（消息生产方）将消息发给消息中间件，事务参与方从消息中间件接收消息，事务发起方和消息中间件之间，事务参与方（消息消费方）和消息中间件之间都是通过网络通信，由于网络通信的不确定性会导致分布式事务问题。
+
+因此可靠消息最终一致性方案要解决以下几个问题：
+1. 本地事务与消息发送的原子性问题  
+本地事务与消息发送的原子性问题即：事务发起方在本地事务执行成功后消息必须发出去，否则就丢弃消息。即实现本地事务和消息发送的原子性，要么都成功，要么都失败。本地事务与消息发送的原子性问题是实现可靠消息最终一致性方案的关键问题。
+2. 事务参与方接收消息的可靠性  
+事务参与方必须能够从消息队列接收到消息，如果接收消息失败可以重复接收消息。
+3. 消息重复消费的问题
+由于网络2的存在，若某一个消费节点超时但是消费成功，此时消息中间件会重复投递此消息，就导致了消息的重复消费。  
+要解决消息重复消费的问题就要实现事务参与方的方法幂等性。
+### 5.2 小结
+可靠消息最终一致性就是保证消息从生产方经过消息中间件传递到消费方的一致性：
+1. 本地事务与消息发送的原子性问题。
+2. 事务参与方接收消息的可靠性。
+
+可靠消息最终一致性事务适合执行周期长且实时性要求不高的场景。引入消息机制后，同步的事务操作变为基于消息执行的异步操作, 避免了分布式事务中的同步阻塞操作的影响，并实现了两个服务的解耦。
+## 6 分布式事务解决方案之最大努力通知6 分布式事务解决方案之最大努力通知
+### 6.1 什么是最大努力通知
+最大努力通知方案是指：事务发起方将消息发送给消息中间件，事务参与方从消息中间件接收消息并处理事务，但是不保证事务的最终一致性。
+
+目标：发起通知方通过一定的机制最大努力将业务处理结果通知到接收方。
+
+最大努力通知与可靠消息一致性有什么不同？
+
+1. 解决方案思想不同  
+可靠消息一致性，发起通知方需要保证将消息发出去，并且将消息发到接收通知方，消息的可靠性关键由发起通知方来保证。最大努力通知，发起通知方尽最大的努力将业务处理结果通知为接收通知方，但是可能消息接收不到，此时需要接 收通知方主动调用发起通知方的接口查询业务处理结果，通知的可靠性关键在接收通知方。
+2. 两者的业务应用场景不同  
+可靠消息一致性关注的是交易过程的事务一致，以异步的方式完成交易。最大努力通知关注的是交易后的通知事务，即将交易结果可靠的通知出去。
+3. 技术解决方向不同  
+可靠消息一致性要解决消息从发出到接收的一致性，即消息发出并且被接收到。最大努力通知无法保证消息从发出到接收的一致性，只提供消息接收的可靠性机制。可靠机制是，最大努力的将消息通知给接收方，当消息无法被接收方接收时，由接收方主动查询消息（业务处理结果）
+
+### 6.2 解决方案
+**方案一**
+
+![alt text](images/51.png)
+
+本方案是利用 MQ 的 ack 机制由 MQ 向接收通知方发送通知，流程如下：
+1. 发起通知方将通知发给 MQ。使用普通消息机制将通知发给MQ。
+注意：如果消息没有发出去可由接收通知方主动请求发起通知方查询业务执行结果。（后边会讲）
+2. 接收通知方监听 MQ。
+3. 接收通知方接收消息，业务处理完成回应 ack。
+4. 接收通知方若没有回应 ack 则 MQ 会重复通知。
+MQ会按照间隔 1min、5min、10min、30min、1h、2h、5h、10h的方式，逐步拉大通知间隔，直到达到通知要求的时间窗口上限。
+5. 接收通知方可通过消息校对接口来校对消息的一致性。
+
+**方案二**
+
+![alt text](images/52.png)
+
+交互流程如下：
+1. 发起通知方将消息发给 MQ。  
+使用可靠消息一致方案中的事务消息保证本地事务和消息的原子性，最终将通知先发给 MQ。
+2. 通知程序监听 MQ，接收 MQ 的消息。  
+方案 1 中接收通知方直接监听 MQ，方案 2 中由通知程序监听 MQ。  
+通知程序若没有回应 ack 则 MQ 会重复通知。
+3. 通知程序通过互联网接口协议（如 http、webservice）调用接收通知方案接口，完成通知。
+通知程序调用接收通知方案接口成功就表示通知成功，即消费 MQ 消息成功，MQ 将不再向通知程序投递通知消息。
+4. 接收通知方可通过消息校对接口来校对消息的一致性。
+
+方案1和方案2的不同点：  
+1. 方案 1 中接收通知方与 MQ 接口，即接收通知方案监听 MQ，此方案主要应用与内部应用之间的通知。
+2. 方案 2 中由通知程序与 MQ 接口，通知程序监听 MQ，收到 MQ 的消息后由通知程序通过互联网接口协议调用接收通知方。此方案主要应用于外部应用之间的通知，例如支付宝、微信的支付结果通知。
+### 6.3 小结
+最大努力通知方案是分布式事务中对一致性要求最低的一种，适用于一些最终一致性时间敏感度低的业务；最大努力通知方案需要实现如下功能：
+1. 消息重复通知机制
+2. 消息校对机制
+## 7 总结
+**2PC** 最大的诟病是一个阻塞协议。RM 在执行分支事务后需要等待 TM 的决定，此时服务会阻塞并锁定资源。由于其阻塞机制和最差时间复杂度高，因此，这种设计不能适应随着事务涉及的服务数量增加而扩展的需要，很难用于并发较高以及子事务生命周期较长（long-running transactions） 的分布式服务中。
+
+如果拿**TCC**事务的处理流程与2PC两阶段提交做比较，2PC 通常都是在跨库的 DB 层面，而 TCC 则在应用层面的处理，需要通过业务逻辑来实现。这种分布式事务的实现方式的优势在于，可以让应用自己定义数据操作的粒度，使得降低锁冲突、提高吞吐量成为可能。而不足之处则在于对应用的侵入性非常强，业务逻辑的每个分支都需要实现 Try、Conﬁrm、Cancel 三个操作。此外，其实现难度也比较大，需要按照网络状态、系统故障等不同的失败原因实 现不同的回滚策略。典型的使用场景：满减，登录送优惠券等。
+
+**可靠消息最终一致性**事务适合执行周期长且实时性要求不高的场景。引入消息机制后，同步的事务操作变为基于消息执行的异步操作, 避免了分布式事务中的同步阻塞操作的影响，并实现了两个服务的解耦。典型的使用场景：注册送积分，登录送优惠券等。
+
+**最大努力通知**是分布式事务中要求最低的一种,适用于一些最终一致性时间敏感度低的业务；允许发起通知方处理业务失败，在接收通知方收到通知后积极进行失败处理，无论发起通知方如何处理结果都会不影响到接收通知方的后续处理；发起通知方需提供查询执行情况接口，用于接收通知方校对结果。典型的使用场景：银行通知、支付结果通知等。
+![alt text](images/53.png)
 # 三、分布式锁
 可重入锁允许一个线程在持有锁的情况下再次获取该锁，而不会导致死锁。当线程再次获取锁时，需要记录获取锁的次数，并在每次释放锁时相应减少获取锁的次数，只有当获取锁的次数为0时，其他线程才能获取该锁。
 ## 1 为何需要分布式锁
@@ -389,4 +582,386 @@ client1获取了锁并且设置了锁的超时时间，但是client1之后出现
 - 时钟发生跳跃:对于Redis服务器如果其时间发生了向跳跃，那么肯定会影响我们锁的过期时间，那么我们的锁过期时间就不是我们预期的了，也会出现client1和client2获取到同一把锁，那么也会出现不安全，这个对于Mysql也会出现。但是ZK由于没有设置过期时间，那么发生跳跃也不会受影响。
 - 长时间的网络I/O:这个问题和我们的GC的STW很像，也就是我们这个获取了锁之后我们进行网络调用，其调用时间由可能比我们锁的过期时间都还长，那么也会出现不安全的问题，这个Mysql也会有，ZK也不会出现这个问题。
 # 四、Docker
+## 1. 优势
+1. 上手快。
+2. 职责的逻辑分类。使用Docker，开发人员只需要关心容器中运行的应用程序，而运维人员只需要关心如何管理容器。Docker设计的目的就是要加强开发人员写代码的开发环境与应用程序要部署的生产环境一致性。从而降低那种“开发时一切正常，肯定是运维的问题（测试环境都是正常的，上线后出了问题就归结为肯定是运维的问题）
+3. 快速高效的开发生命周期。
+4. Docker还鼓励面向服务的体系结构和微服务架构。
+## 2. 容器与虚拟机比较
+1. Docker服务器与客户端
+- Docker是一个客户端-服务器（C/S）架构程序。Docker客户端只需要向Docker服务器或者守护进程发出请求，服务器或者守护进程将完成所有工作并返回结果。Docker提供了一个命令行工具Docker以及一整套RESTful API。你可以在同一台宿主机上运行Docker守护进程和客户端，也可以从本地的Docker客户端连接到运行在另一台宿主机上的远程Docker守护进程。
+2. Docker镜像与容器
+- 镜像是构建Docker的基石。用户基于镜像来运行自己的容器。镜像也是Docker生命周期中的“构建”部分。镜像是基于联合文件系统的一种层式结构，由一系列指令一步一步构建出来。例如：添加一个文件；执行一个命令；打开一个窗口。
+- 也可以将镜像当作容器的“源代码”。镜像体积很小，非常“便携”，易于分享、存储和更新。Docker可以帮助你构建和部署容器，你只需要把自己的应用程序或者服务打包放进容器即可。容器是基于镜像启动起来的，容器中可以运行一个或多个进程。我们可以认为，镜像是Docker生命周期中的构建或者打包阶段，而容器则是启动或者执行阶段。 容器基于镜像启动，一旦容器启动完成后，我们就可以登录到容器中安装自己需要的软件或者服务。所以Docker容器就是：一个镜像格式；一些列标准操作一个执行环境。
+- Docker借鉴了标准集装箱的概念。标准集装箱将货物运往世界各地，Docker将这个模型运用到自己的设计中，唯一不同的是：集装箱运输货物，而Docker运输软件。
+## 3. 安装与启动
+## 3.1 安装docker
+1. yum包更新到最新
+```
+sudo yum update
+```
+2. 安装需要的软件包，yum-util提供yum-config-manager功能，另外两个是devicemapper驱动依赖的
+```
+sudo yum install -y yum-utils device-mapper-persistent-data lvm2
+```
+3. 设置yum源为阿里云
+```
+sudo yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+```
+4. 安装docker
+```
+sudo yum install docker-ce
+```
+5. 安装后查看docker版本
+```
+docker -v
+```
+### 3.2设置ustc的镜像
+
+- ustc是老牌的Linux镜像服务提供者了，还在遥远的ubuntu 5.0.4版本的时候就在用。ustc的docker镜像加速度很快。ustc docker mirror的优势之一就是不需要注册，是真正的公共服务。
+- 地址：lug.ustc.edu.cn/wiki/mirror…
+- 编辑该文件：
+```
+vi /etc/docker/daemon.json
+```
+- 在该文件下输入如下内容：
+```
+{
+"registry-mirrors":["https://docker.mirrors.ustc.edu.cn"]
+}
+```
+### 3.3 Docker的启动与停止
+1. 启动docker:
+```
+systemctl start docker
+```
+2. 停止docker:
+```
+systemctl stop docker
+```
+3. 重启docker:
+```
+systemctl restart docker
+```
+4. 查看docker状态
+```
+systemctl status docker
+```
+5. 开机启动
+```
+systemctl enable docker
+```
+6. 查看docker概要信息
+```
+docker info
+```
+7. docker在线帮助文档
+```
+docker help
+```
+## 4. 常用命令
+### 4.1 镜像相关命令
+1. 查看镜像
+```
+docker images
+```
+解释：
+- REPOSITORY:镜像名称
+- TAG:镜像标签
+- IMAGE ID:镜像ID
+- __CREATED__镜像的创建日期(不是获取该镜像的日期)
+- SIZE:镜像大小
+
+ 这些镜像都是存储在Docker宿主机的/ver/lib/docker目录下
+
+2. 搜索镜像
+
+如果需要从网络中查找需要的镜像，可以通过以下命令搜索
+
+```
+docker search 镜像名称
+```
+解释：
+- NAME:仓库名称
+- DESCRIPTION:镜像描述
+- STARS:用户评价，反应一个镜像的受欢迎程度
+- OFFICIAL:是否官方
+- AUTOMATED:自动构建，表示该镜像由Docker Hub自动构建流程创建的
+
+3. 拉取镜像
+
+拉取镜像就是从中央仓库下载镜像到本地，我们可以先搜索有哪些镜像，然后直接复制名称拉取镜像
+```
+docker pull 镜像名称
+```
+例如，我要下载centos7镜像
+```
+docker pull centos:7
+```
+4. 删除镜像
+按镜像ID删除镜像
+```
+docker rmi 镜像ID
+```
+5.删除所有镜像
+```
+docker rmi `docker images -q`
+```
+### 4.2 容器相关命令
+1. 查看容器
+- 查看正在运行的容器
+```
+docekr ps
+```
+- 查看所有容器
+```
+docker ps -a
+```
+- 查看最后一次运行的容器
+```
+docker ps -l
+```
+- 查看停止的容器
+```
+docker ps -f status=exited
+```
+2. 创建与启动容器
+- 创建容器常用的参数说明：
+    - 创建容器命令：
+    ```
+    docker run
+    ````
+    - 解释：
+        - -i:表示运行容器
+        - -t：表示容器启动后会进入其命令行。加入这两个参数后，容器创建就能登录进去。即分配一个伪终端。
+        - --name:为创建的容器命名。
+        - -v:表示目录映射关系(前者是宿主机目录，后者是映射到宿主机上的目录)，可以使用多个-v做多个目录或文件映射。注意，最好做目录映射，在宿主机上做修改，然后共享到容器上。
+        - -d:在run 后面加上-d 参数，则会创建一个守护式容器在后台运行(这样创建容器后不会自动登录容器，如果只加-i-t两个参数，创建后就会自动进去容器)。
+        - -p:表示端口映射，前者是宿主机端口，后者是容器内的映射端口。可以使用多个-p做多个端口映射。
+    - 交互式方式创建容器：
+    ```
+    docker run -it --name=容器名称 镜像名称:标签 /bin/bash
+    ```
+        - 举例如下：
+        ```
+        docker run -it --name=mycentos centos:7 /bin/bash
+        ```
+    `这时我们通过ps命令查看，发现可以看到启动的容器，状态为启动状态；`
+
+
+    - 退出当前容器： `exit`
+    - 守护方式创建容器:
+    ```
+    docker run -di --name=容器名称 镜像名称:标签
+    ```
+    - 登录守护式容器方式:
+    ```
+    docker exic -it 容器名称 (或者容器ID)		/bin/bash
+    ```
+        - 具体示例如下：
+        ```
+        ~~java docker exec -it mycentos2 /bin/bash
+        ```
+退出容器都是exit退出；守护进程退出后依然是启动状态，而运行容器则为停止运行了(交互式容器运行exit后则此容器停止运行)；
+
+3. 停止与启动容器
+- 停止容器
+```
+docker stop 容器名称(或者容器ID)
+```
+- 启动容器：
+```
+docekr start 容器名称(或者容器ID)
+```
+4. 文件拷贝
+- 如果我们需要将文件拷贝到容器内可以使用cp命令
+```
+docker cp 需要拷贝的文件或目录   容器名称:容器目录
+```
+- 也可以将文件从容器内拷贝出来
+```
+docker cp 容器名称:容器目录 需要拷贝的文件或目录
+```
+不管是停止还是启动状态，拷贝功能都是可以使用的；
+
+5. 目录挂载
+
+- 我们可以在创建容器的时候，将宿主机的目录与容器内的目录进行映射，这样我们就可以通过修改宿主机某个目录的文件从而去影响容器；
+- 创建容器添加 -v 参数，后边为 宿主机目录：容器目录，例如：
+```
+docker run -di -v /usr/local/myhtml:/usr/local/myhtml --name=mycentos3 centos:7
+```
+- 如果你共享的是多级的目录，可能会出现权限不足的提示
+- 这是因为CentOS7 中安全模块 selinux 把权限禁掉了，我们需要添加参数 --privileged=true 来解决挂载的目录没有权限的问题；
+
+6. 查看容器IP地址
+
+- 我们可以通过以下命令来查看容器运行的各种数据
+```
+docker inspect 容器名称（容器ID）
+```
+- 也可以直接执行下面的命令直接输出IP地址：
+```
+docker inspect --format='{{.NetworkSettings.IPAddress}}' 容器名称(容器ID)
+```
+7. 删除容器(无法删除正在运行的容器，需要先让其停止)
+- 删除指定的容器
+```
+docker rm 容器名称(容器ID)
+```
+## 5. 应用部署
+### 5.1 MYSQL部署
+- 拉取MYSQL镜像
+```
+docker pull centos/mysql-57-centos7
+```
+- 创建容器
+```
+docker run -di --name=tensquare_mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=123456 mysql
+```
+`-p代表端口映射，格式为 宿主机映射端口：容器运行端口    -e代表添加环境变量  MYSQL_ROOT_PASSWORD 是root用户的登录密码`
+- 进入mysql容器
+```
+docker exec -it tensquare_mysql /bin/bash
+```
+- 登录mysql
+```
+mysql -u root -p 
+```
+- 远程登录mysql
+    - 连接宿主机的IP，指定端口为3306
+### 5.2 Tomcat的部署
+- 拉取镜像
+```
+docker pull tomcat:7-jre7
+```
+- 创建容器
+`创建容器 -p代表地址映射`
+```
+docker run -di --name=mytomcat -p 9000:8080 -v /usr/local/webapps:/usr/local/tomcat/webapps tomcat:7-jre7
+```
+将war部署过去即可使用
+
+### 5.3 Nginx部署
+- 拉取镜像
+```
+docker pull nginx
+```
+- 创建Nginx容器
+```
+docker run -di --name=mynginx -p 80:80 nginx
+```
+将静态网页放入，在浏览器访问即可测试
+### 5.4 Redis部署
+- 拉取镜像
+```
+docker pull redis
+```
+- 创建容器
+```
+docker run -di --name=myredis -p 6379 redis
+```
+## 6. 迁移与备份
+### 6.1 容器保存为对象
+可以通过以下命令将容器保存为镜像
+```
+docker commit mynginx mynginx_i
+```
+### 6.2 镜像备份
+通过以下命令将镜像保存为tar文件
+```
+docker save -o mynginx.tar mynginx_i
+```
+### 6.3 镜像恢复与迁移
+首先先删除掉mynginx_img镜像，然后执行此命令进行恢复
+```
+docker load -i mynginx.tar
+```
+-i输入的文件   执行后再次查看镜像，可以看到镜像已经恢复；上面示例中mynginx_i是被一个名叫mynginx创建的一个镜像名称，不代表实际意义；
+## 7. Dockerfile
+### 7.1 什么是Dockerfile
+- Dockerfile是由一系列命令和参数构成的脚本，这些命令应用于基础镜像并最终创建一个新的镜像。
+    - 对于开发人员，可以为开发团队提供一个完全一致的开发环境
+    - 对于测试人员，可以直接拿开发时所构建的镜像或者通过Dockerfile文件构建一个新的镜像开始工作了。
+    - 对于运维人员，在部署时，可以实现应用的无缝移植；
+### 7.2 常用命令
+![alt text](images/45.png)
+### 7.3 Dockfile构建jdk1.8镜像
+1. 创建目录
+```
+mkdir -p /usr/local/dockerjdk8
+```
+2. 将jdk放入
+```
+mv jdk-8u171-linux-x64.tar.gz /usr/local/dockerjdk8
+```
+3 .进入目录
+```
+cd /usr/local/dockerjdk8/
+```
+4. 编辑Dockerfile
+```
+vi Dockerfile
+```
+5. 内容如下：
+```
+FROM centos:7
+MAINTAINER itcast
+WORKDIR /usr
+RUN mkdir /usr/local/java
+ADD jdk-8u171-linux-x64.tar.gz /usr/local/java/
+
+ENV JAVA_HOME /usr/local/java/jdk1.8.0_171
+ENV JRE_HOME $JAVA_HOME/jre
+ENV CLASSPATH $JAVA_HOME/bin/dt.jar:$JAVA_HOME/lib/tools.jar:$JRE_HOME/lib:$CLASSPATH
+ENV PATH $JAVA_HOME/bin:$PATH
+```
+`ESC+ : -> W+Q   保存退出
+6. 构建
+```
+docker build -t='jdk1.8' .
+```
+`这最后面的  . 代表当前目录的DockerFile`
+## 8. Docker私有仓库
+### 8.1 私有仓库搭建与配置
+1. 拉取私有仓库镜像(此步省略)
+```
+docker pull registry
+```
+2. 启动私有仓库容器
+```
+docker run -di --name=registry -p 5000:5000 registry
+```
+3. 打开浏览器  输入地址 http://192.168.184.141:5000/v2/_catalog看到 ** {"repositories"}** 表示私有仓库搭建成功并且内容为空。
+4.修改daemon.json
+```
+vi /etc/docker/daemon.json
+```
+5. 内容如下
+```
+{"insecure-registries":["192.168.184.141:5000"]}
+```
+`此步用于让docker信任私有仓库地址`
+### 8.2 将docker镜像上传至私服
+1. 将已有的镜像打标签
+```
+docker tag jdk1.8 192.168.184.141:5000/jdk1.8
+```
+2. 将打了标签的镜像上传至私服
+```
+docker push 192.168.184.141:5000/jdk1.8
+```
+3. 如果上传失败，显示 connection refused 则说明私服未启动；
+4. 查看有哪些服务启动了的
+```
+docker ps -a
+```
+5. 启动私服
+```
+docker start registry
+```
+6. 继续推送
+```
+docker push 192.168.184.141:5000/jdk1.8
+```
 # 五、Kubernetes
