--- a/云.md
+++ b/云.md
@@ -380,7 +380,7 @@ TCC需要注意三种异常处理分别是空回滚、幂等、悬挂。
 2. 事务参与方接收消息的可靠性。
 
 可靠消息最终一致性事务适合执行周期长且实时性要求不高的场景。引入消息机制后，同步的事务操作变为基于消息执行的异步操作, 避免了分布式事务中的同步阻塞操作的影响，并实现了两个服务的解耦。
-## 6 分布式事务解决方案之最大努力通知6 分布式事务解决方案之最大努力通知
+## 6 分布式事务解决方案之最大努力通知
 ### 6.1 什么是最大努力通知
 最大努力通知方案是指：事务发起方将消息发送给消息中间件，事务参与方从消息中间件接收消息并处理事务，但是不保证事务的最终一致性。
 
